# thinkgearLib

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
test/: test_core.c  test_core.h
thinkgearLib/: common.c  common.cpp  common.h  thinkgear.c  thinkgear.cpp  thinkgear.h
thinkgearLib/core/: common.c  common.h
thinkgearLib/core/linux/: thinkgear_linux.c  thinkgear_linux.h
thinkgearLib/core/win/: thinkgear_win.c  thinkgear_win.h
thinkgearLib/utils/: utils.c  utils.h
